[gd_scene load_steps=6 format=3 uid="uid://d2hbtaulje8em"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_edgxy"]
[ext_resource type="PackedScene" uid="uid://uiim2bkkgwug" path="res://Scenes/card_template.tscn" id="2_yx255"]
[ext_resource type="ButtonGroup" uid="uid://q2m6lpuqqkyw" path="res://Scenes/menuButtons.tres" id="3_xur4o"]

[sub_resource type="ViewportTexture" id="ViewportTexture_x5c2e"]

[sub_resource type="ViewportTexture" id="ViewportTexture_7uxpj"]
viewport_path = NodePath("CardA/SubViewport")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_edgxy")
card_template_scene = ExtResource("2_yx255")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Score:"

[node name="ScoreValue" type="Label" parent="."]
visible = false
offset_left = 48.0
offset_right = 88.0
offset_bottom = 26.0
text = "9999"

[node name="MoneyLabel" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -188.0
offset_right = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "ENTER to upgrade:"
horizontal_alignment = 2

[node name="MoneyValue" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
size_flags_horizontal = 4
text = "9999"

[node name="GameTitle" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Turrim Caelum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardA" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_x5c2e")

[node name="CardC" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 149.0
offset_top = -175.0
offset_right = 399.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_7uxpj")

[node name="CardB" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.0
offset_top = -175.0
offset_right = -147.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_7uxpj")

[node name="Credits" type="VBoxContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.056
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Top_Space" type="RichTextLabel" parent="Credits"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="Programming" type="RichTextLabel" parent="Credits"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[b]Programming[/b]: Jason Abbott"
fit_content = true

[node name="Design" type="RichTextLabel" parent="Credits"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[b]Design[/b]: Jason Abbott"
fit_content = true

[node name="Design Help" type="RichTextLabel" parent="Credits"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[b]Designers who actually know something about design and were very gratious and gave me feedback[/b]:
[indent]Jesse Decker[/indent]
[indent]Jeff Hamilton[/indent]
[indent]Andy Kirton[/indent]"
fit_content = true

[node name="Art" type="RichTextLabel" parent="Credits"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[b]Art[/b]: Jason Abbott"
fit_content = true

[node name="Sound" type="RichTextLabel" parent="Credits"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[b]Sound[/b]: Free sounds from https://pixabay.com"
fit_content = true

[node name="Bottom_Space" type="RichTextLabel" parent="Credits"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -103.0
offset_right = 125.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu_PlayGame" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_HowToPlay")
focus_previous = NodePath("../Menu_Credits")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "Play Now"

[node name="Menu_HowToPlay" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_Credits")
focus_previous = NodePath("../Menu_PlayGame")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "How to Play"

[node name="Menu_Credits" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_PlayGame")
focus_previous = NodePath("../Menu_HowToPlay")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "Credits"

[node name="Menu_Why" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_PlayGame")
focus_previous = NodePath("../Menu_HowToPlay")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "Why"

[node name="Menu_HighScore" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_PlayGame")
focus_previous = NodePath("../Menu_HowToPlay")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "High Scores"

[node name="Menu_Quit" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../Menu_PlayGame")
focus_previous = NodePath("../Menu_HowToPlay")
theme_override_font_sizes/font_size = 42
toggle_mode = true
button_group = ExtResource("3_xur4o")
text = "Quit"

[node name="HowToPlay" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -14.0
offset_right = -72.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top_Space" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="Text" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "Either use a controller or the WASD keys to move your ship around.

The enemies will eventually get to the castle in the lower right corner, but they will always take some zigs and zags before getting there. When the enemies are on final approach to the castle, they will spin faster and leave a trail.

Game ends when:
[ul]an enemy collides with you[/ul]
[ul]an enemy collides with your castle[/ul]
[ul]you collide with your castle[/ul]

Your ship is always going to be firing towards the closest enemy to you, but your bullets can only travel so far.

Periodically you will earn upgrades (message will appear in the upper right hand corner). When you have breathing room hit ENTER (or the A button on a controller) and it will allow you to pick an upgrade.

Enemies can sometimes come with various mutations:
[ul] extra large ones take more than one hit to kill[/ul]
[ul] faster enemy[/ul]
[ul] armored enemies that shrug off damage[/ul]
[ul] blinky ones that will split into multiple children when they die[/ul]
Sometimes enemies can come with more than one mutation (or the same mutation several times)"
fit_content = true

[node name="Bottom_Space" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="HighScoreList" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top_Space" type="RichTextLabel" parent="HighScoreList"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="HighScoreList"]
layout_mode = 2

[node name="Left Space" type="RichTextLabel" parent="HighScoreList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="High Score Label" type="RichTextLabel" parent="HighScoreList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]High Scores:[/center]"
fit_content = true
scroll_active = false

[node name="Right Spacer" type="RichTextLabel" parent="HighScoreList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="ListContainer" type="GridContainer" parent="HighScoreList"]
layout_mode = 2
columns = 2

[node name="Bottom_Space" type="RichTextLabel" parent="HighScoreList"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="ShowPage_Why" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top_Space" type="RichTextLabel" parent="ShowPage_Why"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="Text" type="RichTextLabel" parent="ShowPage_Why"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "This game was created, mostly, so that I could learn to use Godot.

There isn't any great design effort here, and certainly no laudible art in this game. 
Heck, even the coding isn't that interesting (although I do plan on making it available on GitHub).

It's just here so that I can, soup to nuts, make a complete game in Godot. I've imposed a limit of 120 hours (three work weeks) of time that I'll invest in it.

If you found any enjoyment in it, that's above and beyond any expectations on my part."
fit_content = true

[node name="Bottom_Space" type="RichTextLabel" parent="ShowPage_Why"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="MapSelection" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top_Space" type="RichTextLabel" parent="MapSelection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="Text" type="RichTextLabel" parent="MapSelection"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[center]Select Map:[/center]"
fit_content = true

[node name="MapButtons" type="VBoxContainer" parent="MapSelection"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Bottom_Space" type="RichTextLabel" parent="MapSelection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="GameOverStatsPage" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top_Space" type="RichTextLabel" parent="GameOverStatsPage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="GameOver" type="Label" parent="GameOverStatsPage"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 84
text = "Game Over"

[node name="StatsGrid" type="GridContainer" parent="GameOverStatsPage"]
layout_mode = 2
columns = 2

[node name="Mid_Space" type="RichTextLabel" parent="GameOverStatsPage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[node name="PressAnyKey" type="RichTextLabel" parent="GameOverStatsPage"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "[center]Press anything to continue...[/center]"
fit_content = true

[node name="Bottom_Space" type="RichTextLabel" parent="GameOverStatsPage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
fit_content = true

[connection signal="gui_input" from="CardA" to="." method="_on_card_a_gui_input"]
[connection signal="mouse_entered" from="CardA" to="." method="_on_card_a_mouse_entered"]
[connection signal="mouse_exited" from="CardA" to="." method="_on_card_a_mouse_exited"]
[connection signal="gui_input" from="CardC" to="." method="_on_card_a_gui_input"]
[connection signal="mouse_entered" from="CardC" to="." method="_on_card_a_mouse_entered"]
[connection signal="mouse_exited" from="CardC" to="." method="_on_card_a_mouse_exited"]
[connection signal="gui_input" from="CardB" to="." method="_on_card_a_gui_input"]
[connection signal="mouse_entered" from="CardB" to="." method="_on_card_a_mouse_entered"]
[connection signal="mouse_exited" from="CardB" to="." method="_on_card_a_mouse_exited"]
[connection signal="pressed" from="Menu/Menu_PlayGame" to="." method="_on_menu_play_game_pressed"]
[connection signal="pressed" from="Menu/Menu_HowToPlay" to="." method="_on_menu_how_to_play_pressed"]
[connection signal="pressed" from="Menu/Menu_Credits" to="." method="_on_menu_credits_pressed"]
[connection signal="pressed" from="Menu/Menu_Why" to="." method="_on_menu_why_pressed"]
[connection signal="pressed" from="Menu/Menu_HighScore" to="." method="_on_menu_highscore_pressed"]
[connection signal="pressed" from="Menu/Menu_Quit" to="." method="_on_menu_quit_pressed"]
